# bdf_harmonization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dotenv_example  pyproject.toml
docs/: README.md  apiclient.md  cde-recommendation.md  data-chord.md  example-use-cases.md  harmonize.md  intro.md  requesting-API-key.md  requesting-data-be-added.md  what-we-harmonize.md
scripts/: harmonize-terms
src/apiclient/: __init__.py  api_types.py
