[project]
name = "apiclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Dennis", email = "bdennis+github@netrias.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "typer>=0.16.0",
]

[project.scripts]
apiclient = "apiclient:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
