[project]
name = "apiclient"
version = "0.1.0"
description = "Turn messy biomedical metadata into clean, standards‑compliant records in just a few lines of code."
readme = "README.md"

authors = [
    { name = "Patrick Boutet", email = "pboutet@netrias.com"},
    { name = "Brian Dennis", email = "bdennis@netrias.com"},
]

maintainers = [
    { name = "Patrick Boutet", email = "pboutet@netrias.com"},
    { name = "Brian Dennis", email = "bdennis@netrias.com"},
]

license = {file = "LICENSE"}

requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typer>=0.16.0",
]

[project.scripts]
apc = "apiclient:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
